Fix: Align max-width of profile and about pages to explore page

--- a/src/app/pages/profile-page/profile-page.component.scss
+++ b/src/app/pages/profile-page/profile-page.component.scss
@@ -65,7 +65,7 @@
 #profile-page-content {
   padding: 1rem 2rem 0 2rem;
   overflow: hidden;
-  max-width: 1280px;
+  max-width: 1600px;
   margin: 0 auto;
 
   animation: profilePageContentFadeIn 0.3s ease-in-out forwards 1;
